kfreebsd-11 (11.0~svn295083-1) UNRELEASED; urgency=medium

  * New upstream snapshot of -CURRENT
  * Disable building the xen (PV, i386-only) flavour, removed upstream,
    as it is preferred now to use the generic kernel in HVM mode.
  * Use new preferred hostname for upstream SVN with HTTPS
    (svn.freebsd.org)
  * Refresh patches:
    - unescaped_kern_ident.diff
    - userland.diff
    - 001_misc.diff
    - 004_xargs.diff
    - 109_linprocfs_non_x86.diff
    - 902_version.diff
    - 906_grow_sysv_ipc_limits.diff
    - 914_psm.diff
    - 917_disable_kgssapi.diff
    - 918_unix_socket_overflow.diff
    - 920_linux_cflags.diff
    - 923_newvers_timestamp.diff
    - 924_module_objdir.diff
    - 930_freebsd_cc.diff
    - 940_ld_verbose.diff
    - 999_config.diff
  * Change Build-Depends from clang-3.6 to clang-3.7, to match upstream

 -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 06 Feb 2016 16:17:19 +0000

kfreebsd-11 (11.0~svn284956-1) experimental; urgency=medium

  * New upstream snapshot of -CURRENT (not the latest available
    snapshot, but the last that can build with currently packaged
    freebsd-buildutils version):
    - Fix for EN-14:05:
      ciss(4) potential data corruption bug (Closes: #748079)
    - Fix for EN-14:06:
      Triple fault on execve from 64-bit thread to 32-bit process
      (Closes: #748745)
    - SA-14:22: Fix memory leak in sandboxed namei lookup.
      (CVE-2014-3711) (Closes: #766279)
    - SA-14:25: Fix kernel stack disclosure in setlogin(2) / getlogin(2)
      (CVE-2014-8476) (Closes: #768109)
    - SA-15:02: SCTP SCTP_SS_VALUE kernel memory corruption and
      disclosure vulnerability (CVE-2014-8612) (Closes: #776415)
    - SA-15:03: SCTP stream reset vulnerability (CVE-2014-8613)
      (Closes: #776416)
    - EN-15:01: vt(4) crash with improper ioctl parameters
      (CVE-2014-0998) (Closes: #779194)
    - SA-15:04: integer overflow in IGMP protocol (CVE-2015-1414)